@@ -21,6 +21,8 @@ Enhancements:
 - configuration:
   - deprecate 'loop' option in gbsplayrc in favor of new 'loop_mode'
     with values 'none', 'range' and 'single'
+  - support 'native', 'little' and 'big' values for 'endian' option in
+    gbsplayrc instead of just 'n', 'l' and 'b'
 
 - documentation:
   - describe loop mode keybinding in gbsplay(1) manpage
